메인, 푸터 배너 슬라이더 적용/메인메뉴 스티키헤더 적용/즐겨찾고 이용하남 버튼 이벤트 적용

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <title>하남시청</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 <body>
     <div id="wrap">
@@ -580,22 +580,54 @@
                             </div>
                             <div class="img_slide">
                                 <div class="img_slide_frame">
-                                    <ul class="info_img_slide cf">
-                                        <li class="fl"><a href="#"><img src="image/info_img_slide01.jpg" alt="제20대 대통령선거 확정된 선거인명부 열람 및 등재여부 확인
+                                    <ul class="info_img_slide">
+                                        <li><a href="#"><img src="image/info_img_slide01.jpg" alt="제20대 대통령선거 확정된 선거인명부 열람 및 등재여부 확인
                                         ○ 열람기간 : 2022.02.26.(토) ~ 2022.03.09.(수) 19:30
                                         ○ 열람방법
                                         - 하남시 홈페이지 인터넷 열람 (열람기간 중 24시간 열람 가능)
                                          - 주소지 관할 행정복지센터 방문 열람 (열람기간 중 행정복지센터 업무시간)
                                         ○ 문    의 : 주소지 관할 행정복지센터 열람하러 가기"></a></li>
-                                        <li class="fl"><a href="#"><img src="image/info_img_slide02.jpg" alt="빛나는 하남 /2021년 행안부 주관 지자체 생산성대상 최우수상 수상 /행정역량평가 전국2위"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide02.jpg" alt="빛나는 하남 /2021년 행안부 주관 지자체 생산성대상 최우수상 수상 /행정역량평가 전국2위"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide03.jpg" alt="하남시, 2021년 민원서비스 종합평가 「최우수」기관 선정
+                                            - 주관 : 행정안전부, 국민권익위원회
+                                            - 분야 : 민원만족도 등 5개 분야"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide05.jpg" alt="노바백스 백신 사전예약 안내
+                                            ○ 접종기관 : 위탁의료기관 85개소(별첨)
+                                            ○ 접종대상 : 18세 이상 미접종자 
+                                            ○ 접종백신 : 노바백스 백신
+                                            ○ 접종방법 : 전량 사전예약제
+                                            ○ 접종일정 : ‘22.3.7.(월) ~
+                                            ○ 기타사항 : 보건소 및 지정기관 당일접종은 3.6일까지 한시 진행
+                                            ○ 예약방법 : 하남시콜센터(031-5182-1023) 또는 누리집(ncvr.kdca.go.kr)"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide07.jpg" alt="신속항원검사 시행 관련 하남시 (임시)선별진료소 운영 안내
+                                            오미크론 대응을 위한 신속항원검사 시행과 관련하여 하남시 선별진료소 및 임시선별검사소 운영사항을 알려드립니다.
+                                            자세히보기"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide08.jpg" alt="2022년 출생아 첫만남이용권 200만원 지급
+                                            /출산 축하합니다.~
+                                            /지급대상 : 2022.1.1. 이후 출생아
+                                            /지급금액 : 출생아당 200만원 이용권(국민행복카드 포인트)
+                                            /사용기간 : 아동 출생일로 부터 1년
+                                            /사용처 : 유흥업종, 사행업종 등 제외한 전업종(온라인 구매가능)
+                                            /신청 : 주소지 행정복지센터, '복지로' 또는 '정부24' 출생신고 하면서 신청가능
+                                            /문의 : 미사보건센터 모자보건실 031)790-5040  주소지 행정복지센터"></a></li>
+                                        <li><a href="#"><img src="image/info_img_slide09.jpg" alt="하남시 경로당 및 노인복지관 등 운영 전면 중단
+                                            □ 기    간 : 2022년 2월 14일(월) ~ 별도 안내시까지
+                                            □ 대    상
+                                             ○ 경로당 및 카네이션하우스 운영 전면 중단
+                                             ○ 노인복지관 업무 중 취미‧여가 관련 활동 서비스 중단
+                                                - 경로식당 대체식(도시락) 제공 유지
+                                            □ 방문자 : 원칙적으로 출입 금지,
+                                               - 불가피한 상황에서 1회만 출입하는 경우
+                                                 시설장 등 책임자 판단하에 방역수칙 준수, 예외적으로 출입 허용
+                                            □ 문의 : 노인장애인복지과 ☎ 031-790-5511"></a></li>
                                     </ul>
-                                    <ul class="promotion_img_slide cf">
-                                        <li class="fl"><a href="#"><img src="image/pro_img_slide01.jpg" alt="2022년 민생규제 혁신과제 공모전 알림
+                                    <ul class="promotion_img_slide">
+                                        <li><a href="#"><img src="image/pro_img_slide01.jpg" alt="2022년 민생규제 혁신과제 공모전 알림
                                         ○ 공모과제 : 우리 삶을 둘러싼 모든 규제 관련 개선안
                                         ○ 자격 : 대한민국 국민 누구나
                                         ○ 공모기간 : 2022.2.14.(월) ~ 3.31.(목)
                                         ○ 문의: 정책기획관 기획팀 031-790-5981 자세히보기"></a></li>
-                                        <li class="fl"><a href="#"><img src="image/pro_img_slide02.jpg" alt="2022년 3월호 《청정하남》 발행 안내
+                                        <li><a href="#"><img src="image/pro_img_slide02.jpg" alt="2022년 3월호 《청정하남》 발행 안내
                                         1. 테마가이드 : 하남시 자원봉사센터
                                         2. 하남돋보기 : 움직이는 하남이·방울이 AR포토존
                                         3. 숲과 함께 : 검단산 잣나무숲
@@ -628,7 +660,7 @@
                                     <a href="#main_notice_06" class="fl">기타 알림사항</a>
                                 </div>
                                 <div class="main_notice_pagecount fl">
-                                    <span class="present_page">1</span> / <span class="total_page">7</span>
+                                    <span>1 / 4</span>
                                 </div>
                                 <a href="board.html" class="noticemore_btn fl">더보기</a>
                             </div>
@@ -1024,7 +1056,7 @@
                             <div class="bookmark_content fl"><a href="board.html"><img src="image/favorite_icon08.png" alt="주민생활혁신"><span>주민생활혁신</span></a></div>
                             <div class="bookmark_content fl"><a href="board.html"><img src="image/favorite_icon11.png" alt="생활지도"><span>생활지도</span></a></div>
                         </div>
-                        <button type="button" class="bookmark_btn"><span>전체보기</span></button>
+                        <button type="button" class="bookmark_btn"><span class="boockmarkbtn_entire">전체보기</span><span class="boockmarkbtn_close">닫기</span></button>
                     </div>
                 </div>
             </div>
@@ -1340,6 +1372,191 @@
                                 <a href="#">huic 하남도시공사</a>
                             </div>
                         </div>
+                        <div class="banner_list02 cf">
+                            <div class="banner_content fl">
+                                <a href="#">하남종합운동장 국민체육센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">하남문화재단</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">하남문화재단 하남역사박물관</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">(재)하남시자원봉사센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">하남시 건강가정지원센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">하남시 정신건강증진센터</a>
+                            </div>
+                        </div>
+                        <div class="banner_list03 cf">
+                            <div class="banner_content fl">
+                                <a href="#">하남시 장애인 무료법률 상담센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도소셜허브</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기소상공인희망드림</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">굿모닝 경기</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도교통연수원 경기도교통사고상담실</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">한국국토정보공사</a>
+                            </div>
+                        </div>
+                        <div class="banner_list04 cf">
+                            <div class="banner_content fl">
+                                <a href="#">온라인행정심판</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">중앙부처 법령 유권해석</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">공직비리신고센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">건축행정시스템 새움터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">WORKNET</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">자치법규정보시스템(ELIS)</a>
+                            </div>
+                        </div>
+                        <div class="banner_list05 cf">
+                            <div class="banner_content fl">
+                                <a href="#">제품안전정보센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">국가재난정보센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">NPS국민연금</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">정부3.0대한민국정보공개</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">국방헬프콜 1303</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">국민신문고</a>
+                            </div>
+                        </div>
+                        <div class="banner_list06 cf">
+                            <div class="banner_content fl">
+                                <a href="#">경기데이터드림</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도어린이집관리시스템</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도 장애인생산품판매시설</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도의회 하남상담소</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도 옴부즈만</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">경기도시장상권진흥원</a>
+                            </div>
+                        </div>
+                        <div class="banner_list07 cf">
+                            <div class="banner_content fl">
+                                <a href="#">순환자원정보센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">청탁금지법 통합검색</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">여성폭력 사이버 상담</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">어린이급식관리지원센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">보이스피싱 피해</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">서민금융 1332</a>
+                            </div>
+                        </div>
+                        <div class="banner_list08 cf">
+                            <div class="banner_content fl">
+                                <a href="#">환경부 전기차 충전소 안내</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">성범죄자 알리미</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">부동산거래질서교란행위 신고센터</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">하남시다문화가족지원포털 다누리</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">아름다운가게</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">대기환경정보서비스</a>
+                            </div>
+                        </div>
+                        <div class="banner_list09 cf">
+                            <div class="banner_content fl">
+                                <a href="#">공장설립 온라인 지원시스템</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">LAIIS 내고장알리미</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">찾기쉬운 생활법령정보</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">노인장기요양보험</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">아이돌봄서비스</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">도로명주소 안내시스템</a>
+                            </div>
+                        </div>
+                        <div class="banner_list10 cf">
+                            <div class="banner_content fl">
+                                <a href="#">두루누리 사회보험</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">역사와 문화가 살아숨쉬는 남한산성</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">(재)한국방문의해위원회</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">학교안전공제중앙회</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">다문화가족지원포털 다누리</a>
+                            </div>
+                            <div class="banner_content fl">
+                                <a href="#">한국전기안전공사</a>
+                            </div>
+                        </div>
+                        <div class="banner_list11 cf">
+                            <div class="banner_content fl">
+                                <a href="#">Opinet</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="banner_btn fr cf">
                         <button class="banner_btn_top fl">위로</button>
@@ -1382,7 +1599,13 @@
         </div>
     </div>
     <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+    <script src="js/detectmobilebrowser.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        if(jQuery.browser.mobile==true){
+            location.href="mobile/";
+        }
+    </script>
 </body>
 </html>
