파일 경로 수정/푸터 - 주소 및 전화번호 등 정보 변경, 유효성검사 아이콘 추가

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1615,12 +1615,13 @@
                 <div class="inner cf">
                     <div class="footer_logo fl"><img src="../image/footer_logo.png" alt="하남시"></div>
                     <div class="info_box fl">
-                        <address><span>우)12951 경기도 하남시 대청로 10 (신장동) 하남시청 <br/> TEL : 031-790-6114 / FAX : 031-790-6399</span></address>
+                        <address><span>우)468117 경기도 하남시 풍산로 315-4 (풍산동) 3층 <br/> TEL : 078-795-7514 / FAX : 078-798-6389</span></address>
                         <p>Copyright (c) 2021 HANAM CITY. All rights Reserved.</p>
                     </div>
                     <div class="validity fr">
                         <a href="#" title="국가상징알아보기 : 새창" target="_blank"><img src="../image/taegugki.jpg" alt="국가상징알아보기"></a>
-                        <a href="#" title="국가 공인 인증기관 : 웹와치 새창" target="_blank"><img src="../image/wa_mark.png" alt="과학기술정보통신부 WEB ACCESSIBILITY 마크(웹 접근성 품질인증 마크)"></a>
+                        <a href="https://validator.w3.org/check?uri=https://kimhansul.github.io/project01/" title="html 유효성검사 새창 열기" target="_blank"><img src="http://www.w3.org/Icons/valid-html401-blue.png" alt="Html Validation Icons 올바른 HTML입니다!"></a>
+                        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimhansul.github.io/project01/" title="CSS 유효성검사 새창 열기" target="_blank"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="CSS Validation Icons 올바른 CSS입니다!"></a>
                     </div>
                 </div>
             </div>
